@@ -5,10 +5,9 @@ import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
-import com.google.common.base.Strings;
-import com.google.common.io.BaseEncoding;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonParser;
+import java.math.BigInteger;
 import java.util.Arrays;
 import org.junit.Test;
 import org.stellar.sdk.responses.TransactionDeserializer;
@@ -62,22 +61,22 @@ public class MemoTest {
   @Test
   public void testMemoId() {
     MemoId memo = Memo.id(9223372036854775807L);
-    assertEquals(9223372036854775807L, memo.getId());
+    assertEquals(BigInteger.valueOf(9223372036854775807L), memo.getId());
     assertEquals(MemoType.MEMO_ID, memo.toXdr().getDiscriminant());
-    assertEquals(new Long(9223372036854775807L), memo.toXdr().getId().getUint64());
+    assertEquals(
+        BigInteger.valueOf(9223372036854775807L), memo.toXdr().getId().getUint64().getNumber());
     assertEquals("9223372036854775807", memo.toString());
   }
 
   @Test
   public void testParseMemoId() {
-    String longId = "10048071741004807174";
+    String maxId = "18446744073709551615";
     JsonElement element =
-        new JsonParser()
-            .parse(String.format("{ \"memo_type\": \"id\", \"memo\": \"%s\" }", longId));
+        new JsonParser().parse(String.format("{ \"memo_type\": \"id\", \"memo\": \"%s\" }", maxId));
     TransactionResponse transactionResponse =
         new TransactionDeserializer().deserialize(element, null, null);
     MemoId memoId = (MemoId) transactionResponse.getMemo();
-    assertEquals(longId, Long.toUnsignedString(memoId.getId()));
+    assertEquals(new BigInteger(maxId), memoId.getId());
   }
 
   @Test
@@ -94,7 +93,7 @@ public class MemoTest {
 
   @Test
   public void testMemoHashSuccess() {
-    MemoHash memo = Memo.hash(Strings.padEnd("4142434445464748494a4b4c", 64, '0'));
+    MemoHash memo = Memo.hash("4142434445464748494a4b4c0000000000000000000000000000000000000000");
     assertEquals(MemoType.MEMO_HASH, memo.toXdr().getDiscriminant());
     String test = "ABCDEFGHIJKL";
     assertEquals(test, Util.paddedByteArrayToString(memo.getBytes()));
@@ -104,7 +103,8 @@ public class MemoTest {
   @Test
   public void testMemoHashSuccessUppercase() {
 
-    MemoHash memo = Memo.hash(Strings.padEnd("4142434445464748494a4b4c".toUpperCase(), 64, '0'));
+    MemoHash memo =
+        Memo.hash("4142434445464748494a4b4c0000000000000000000000000000000000000000".toUpperCase());
     assertEquals(MemoType.MEMO_HASH, memo.toXdr().getDiscriminant());
     String test = "ABCDEFGHIJKL";
     assertEquals(test, Util.paddedByteArrayToString(memo.getBytes()));
@@ -162,6 +162,6 @@ public class MemoTest {
     assertNull(memoXdr.getHash());
     assertEquals(
         "4142434445464748494a4b4c0000000000000000000000000000000000000000",
-        BaseEncoding.base16().lowerCase().encode(memoXdr.getRetHash().getHash()));
+        Util.bytesToHex(memoXdr.getRetHash().getHash()).toLowerCase());
   }
 }
